--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-poppins);
-  --font-mono: var(--font-fira-code);
+  --font-sans: var(--font-montserrat);
+  --font-mono: var(--font-inter);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -116,13 +116,13 @@
   * {
     @apply border-border outline-ring/50;
   }
-  html {
-    font-family: var(--font-poppins), sans-serif;
+  html, body {
+    font-family: var(--font-montserrat), sans-serif;
   }
   body {
     @apply bg-background text-foreground;
   }
   code, pre {
-    font-family: var(--font-fira-code), monospace;
+    font-family: var(--font-inter), monospace;
   }
 }
